# coypu-kg-analyser

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pytest.yml
coypu_kg_analyser/: __init__.py  __main__.py  cli.py  live_query.py
coypu_kg_analyser/graph/: owl_graph_builder.py
coypu_kg_analyser/loader/: ontology_loader.py
coypu_kg_analyser/metrics/: bottleneck.py  cascade.py  concentration.py
coypu_kg_analyser/parametrizer/: __init__.py  _common.py  s10_iran.py  s1_soja.py
coypu_kg_analyser/scoring/: criticality.py
coypu_kg_analyser/sparql/: template_generator.py
coypu_kg_analyser/sparql/templates/: bottleneck_connectivity.sparql.j2  cascade_bridge.sparql.j2  concentration_instance_count.sparql.j2  scenario_enrichment.sparql.j2
tests/: s10-iran-angriff.pdl.yaml  test_cli.py  test_common.py  test_graph_builder.py  test_live_query.py  test_loader.py  test_metrics.py  test_outputs.py  test_s10_parametrizer.py  test_s1_parametrizer.py
